--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+body {
+    padding: 25px;
+    background-color: white;
+    color: black;
+    font-size: 25px;
+  }
+  
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
 .blague-container {
     max-width: 600px;
     text-align: center;
@@ -10,10 +23,9 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 30%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%);
 }
-
 
 h2 {
     font-size: 24px;
@@ -26,8 +38,8 @@ p {
     line-height: 1.5;
 }
 
-button {
-    background-color: #007bff;
+.btn {
+    background-color: #a60e0e;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -42,15 +54,15 @@ button {
     height: 100vh; 
     pointer-events: none;
     position: absolute;
-    top: 10%;
-    left: 50%;
+    top: 30%;
+    left: 30%;
     transform: translate(-50%);
   }
 
 #suivant-btn{
     position: absolute;
     top: 65%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%);
 }
 
@@ -69,6 +81,114 @@ button {
 .reponse:hover{
     color: black;
 }
+
+/* dark mode */
+/* .darkbtn{
+    margin-left: 1500px;
+} */
+
+/* btn like */
+/* .fa{
+    margin-left: 900px;
+    margin-top: 490px;
+} */
+
+
+
+/* @keyframes ReponseQnnim{
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(2);
+    }
+    100%{
+        transform: scale(1);
+    }
+} */
+
+
+
+
+.expression-container {
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 30%;
+    left: 70%;
+    transform: translate(-50%);
+    /* margin-left: 300px; */
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+.btn1 {
+    background-color: #0954be;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+#confetti-canvas1 {
+    z-index: 999; 
+    width: 100vw; 
+    height: 100vh; 
+    pointer-events: none;
+    position: absolute;
+    top: 30%;
+    left: 70%;
+    transform: translate(-50%);
+  }
+
+#suivant-btn1{
+    position: absolute;
+    top: 65%;
+    left: 70%;
+    transform: translate(-50%);
+}
+
+.reponse1 {
+    position: absolute;
+    top: 50%;
+    animation: none;
+    /* opacity: 0; */
+    /* visibility: hidden; */
+}
+
+.reponse1 {
+    color: #f1f1f1;
+}
+
+.reponse1:hover{
+    color: black;
+}
+
+/* dark mode */
+/* .darkbtn{
+    margin-left: 1500px;
+} */
+
+/* btn like */
+/* .fa{
+    margin-left: 900px;
+    margin-top: 490px;
+} */
 
 
 
